--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tgbot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
@@ -14,10 +14,10 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.15.0",
+    "cookie-session": "^2.1.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "express-session": "^1.18.0",
     "input": "^1.0.1",
     "node-telegram-bot-api": "^0.66.0",
     "prisma": "^5.15.0",
