--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,9 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/app.js"
+      "dest": "/app.js",
+      "methods": ["GET"],
+      "timeout": 30
     }
   ]
 }
