update vercel.json again

--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,8 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/app.js"
+      "dest": "/app.js",
+      "methods": ["GET", "POST"]
     }
   ]
 }
