--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/app.js",
-      "methods": ["GET", "POST"]
+      "dest": "/app.js"
     }
   ]
 }
